k8s/observability/opensearch-dashboards/overlays/dev/http-opensearch-dashboards.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-opensearch-dashboards
  namespace: observability
spec:
  hostnames:
    - opensearch.192-168-58-2.sslip.io
  parentRefs:
    - name: homelab-gw
      namespace: networking
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: ak-outpost-shared-outpost
          namespace: auth
          port: 9000
