k8s/observability/opensearch-dashboards/overlays/dev/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-opensearch-dashboards
spec:
  hostnames:
    - opensearch.apps.192-168-58-2.sslip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: opensearch-dashboards-dev
          port: 5601
